# cubi-tools

./: README.md  pyproject.toml
cubi-tools/prototypes/: cluster-info.py  update-metadata.py  update_workflow.py
docs/general/: git_identity_files.md
docs/tools/: auto_git.md  cluster_info.md  update_metadata.md  update_workflow.md
envs/apptainer/: test-disk-io.def
envs/conda/: cubi-tools-dev.yaml  cubi-tools.yaml
src/cubitools/: __init__.py
src/cubitools/cli/: auto_git.py  cluster_info.py  update_metadata.py  update_workflow.py
src/cubitools/constants/: __init__.py
src/prototypes/: test_disk_io.py
