[project]
name = "cubitools"
dynamic = ["version"]
description = "Utility scripts of the Core Unit Bioinformatics"
authors = [
    {name = "Peter Ebert"},
]
maintainers = [
    {name = "Peter Ebert"},
    {name = "Sven Willger"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "toml (>=0.10,<0.11)",
    "semver (>=3.0,<4.0)"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: CUBI",
  "Programming Language :: Python :: 3.11",
  "Private :: Do Not Upload"
]

[project.urls]
homepage = "https://github.com/core-unit-bioinformatics/cubi-tools"
repository = "https://github.com/core-unit-bioinformatics/cubi-tools"

[project.scripts]
ct-git = "cubitools.cli.auto_git:main"
ct-hpc = "cubitools.cli.cluster_info:main"
ct-upd-wf = "cubitools.cli.update_workflow:main"
ct-upd-md = "cubitools.cli.update_metadata:main"

[build-system]
requires = ["setuptools>=75", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where=["src"]

[tool.setuptools_scm]

[cubi.tools]
pid = "https://github.com/core-unit-bioinformatics/cubi-tools"
version = "prototype"

[[cubi.tools.script]]
name = "update-metadata.py"

[[cubi.tools.script]]
name = "update-workflow.py"

[[cubi.tools.script]]
name = "cluster-info.py"

[[cubi.tools.script]]
name = "auto-git.py"

[cubi.metadata]
pid = "https://github.com/core-unit-bioinformatics/template-metadata-files"
version = "1.5.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable = [ "logging-fstring-interpolation", "useless-return", "missing-module-docstring",]
